feat: ugly footer

--- a/resources/views/team/members.hbs
+++ b/resources/views/team/members.hbs
@@ -1,4 +1,4 @@
-<div x-data="members" class="p-5 w-100 flex justify-center">
+<div x-data="members" class="p-5 w-100 flex flex-col justify-center">
   <div>
     <h1 class="text-4xl text-red-500 text-center font-bold">CuC Members</h1>
     <ul class="grid grid-cols-2 md:grid-cols-3">
@@ -20,4 +20,5 @@
       </template>
     </ul>
   </div>
+  {{>footer year="2022" siteName="CuC" }}
 </div>
