--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="p-5 w-100 flex justify-center">
   <div>
     <h1 class="text-4xl text-red-500 text-center font-bold">
-      Were Welcome to ÇuÇ
+      Were Welcomes
     </h1>
 </div>
