feat: edinaldo pereira

--- a/resources/views/index.hbs
+++ b/resources/views/index.hbs
@@ -3,4 +3,7 @@
     <h1 class="text-4xl text-blue-500 text-center font-bold">
       Were Welcomes
     </h1>
+    <div class="w-full">
+      <img src="public/images/edireira.jpg" alt="edinaldo pereira">
+    </div>
 </div>
